# netbox-widget-chart

./: .gitignore  CHANGELOG.md  COMPATIBILITY.md  Makefile  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  draft-release.yml  integration.yml  release-please.yml  release.yml
netbox_chart_widget/: __init__.py  widgets.py
netbox_chart_widget/templates/netbox_chart_widget/: chart_widget.html
netbox_piechart_widget/: __init__.py  widgets.py
netbox_piechart_widget/templates/netbox_piechart_widget/: piechart_widget.html
netbox_widget_chart/: __init__.py  widgets.py
netbox_widget_chart/templates/netbox_widget_chart/: chart_widget.html
tests/: conftest.py  test_widgets.py
