[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-widget-chart"
version = "0.1.4"
description = "A configurable pie/doughnut chart dashboard widget for NetBox"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "peterbaumert" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
dev = ["black", "ruff", "build"]

[tool.black]
line-length = 140
target-version = ["py312"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.setuptools.packages.find]
where = ["."]
include = ["netbox_widget_chart*"]

[tool.setuptools.package-data]
netbox_widget_chart = ["templates/**/*.html"]
